# harmonize

./: .gitignore  Caddyfile  Cargo.toml  README.md  dfx.json  initialize.sh  package-lock.json  package.json  run-and-initialize.sh  run.sh
src/harmonize_backend/: .envrc  Cargo.toml  Makefile  harmonize_backend.did  ic_siwe_provider.did
src/harmonize_backend/did/: harmonize_backend.did
src/harmonize_backend/src/: access_control.rs  ecdsa.rs  lib.rs  signer.rs  state.rs  types.rs  wallet.rs
src/harmonize_backend/src/chain_fusion/: ecdsa.rs  eth_call.rs  eth_get_logs.rs  eth_send_raw_transaction.rs  evm_rpc.rs  evm_signer.rs  fees.rs  guard.rs  job.rs  lifecycle.rs  mod.rs  state.rs
src/harmonize_backend/src/chain_fusion/job/: safe.rs  submit_result.rs
src/harmonize_contracts/: .gitignore  deploy-coins.sh  endpoint-address-31337.txt  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  run-nodes.sh  tsconfig.json
src/harmonize_contracts/scripts/: deploy-coin.ts  deploy-endpoint.ts  deploy.ts  transfer.ts
src/harmonize_contracts/src/contracts/: Coin.sol  Endpoint.sol
src/harmonize_contracts/typechain-types/: hardhat.d.ts  index.ts
src/harmonize_contracts/typechain-types/factories/src/contracts/: Coin__factory.ts  Endpoint__factory.ts  index.ts
src/harmonize_contracts/typechain-types/src/contracts/: Coin.ts  Endpoint.ts  index.ts
src/harmonize_frontend/: package.json
src/harmonize_frontend/src/: App.jsx
tests/: config.py  pytest.ini  requirements.txt  test_deprecated.py  test_harmonize.py  test_wallet.py
