[package]
name = "harmonize_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ethers-core = "2.0.14"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
getrandom = { version = "0.2.8", features = ["custom"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
